# attacking_anti_tamper

./: .gitignore  .gitmodules  README.MD  compute_time_left.py  count_instructions.py  eval.py  eval_game_results.py  eval_mibench_results.py  eval_report.py  full_report.json  run.py
count_instructions_samples/: Makefile  count_to.c  fibonacci.c  fizz_buzz.c
docker_build/: Dockerfile
samples/: build_test.bat  test_tamper.c
taint/: __init__.py  analyze.py  create_patch.py  ida_apply_patches.py  r2_apply_patches.py  run.py
taint_cpp/: CMakeLists.txt  build.sh
taint_cpp/include/taint/: analysis.h  cmdline.h  serialization.h  utils.h
taint_cpp/src/: CMakeLists.txt  analysis.cpp  app.cpp  cmdline.cpp  serialization.cpp
tracer/: CMakeLists.txt  build.bat  build.sh  instrace_x86.cpp  run.bat.in  run.sh.in  utils.h
triton_pintool/: taint.py
